--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -9,5 +9,6 @@
         android:layout_height="wrap_content"
         android:text="Yay Fragments!"
         android:id="@+id/textView"
+        android:textSize="24sp"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
