--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,11 +4,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Yay Fragments!"
-        android:id="@+id/textView"
-        android:textSize="24sp"
-        android:layout_gravity="center_horizontal"/>
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/ListRecyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 </LinearLayout>
